# devlog

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  devlog  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
skills/devlog/: SKILL.md
skills/tephra/: SKILL.md
src/devlog/: __init__.py  __main__.py  cli.py  dates.py  migrate.py  read.py  store.py  write.py
src/tephra/: __init__.py  __main__.py  cli.py  dates.py  read.py  related.py  skill.py  store.py  topics.py  write.py
src/tephra/skills/tephra/: SKILL.md
tests/: conftest.py  test_add.py  test_read.py
