[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog"
version = "0.1.0"
description = "Append/read/edit ~/devlog.md"
requires-python = ">=3.9"

[project.scripts]
devlog = "devlog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.mypy]
python_version = "3.9"
files = ["src/devlog"]

[tool.pylint.main]
fail-under = 10.0

[tool.pylint.format]
max-line-length = 100
