[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tephra"
version = "2.3.0"
description = "Topic-based markdown journal CLI for Obsidian-style vaults"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
tephra = "tephra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.mypy]
python_version = "3.9"
files = ["src/tephra"]
check_untyped_defs = true

[tool.pylint.main]
fail-under = 10.0

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
]
